--- a/style.css
+++ b/style.css
@@ -10,13 +10,13 @@ body {
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background: #fff;
+    background: #141414;
 }
 .card{
     position: relative;
     width: 360px;
-    height: 400px;
-    background: #fff;
+    min-height: 400px;
+    background: #000101;
     box-shadow: 15px 15px 60px rgba(0,0,0,0.15);
     padding: 20px;
 }
@@ -33,7 +33,104 @@ body {
     position: relative;
     width: 36px;
     height: 36px;
-    border: radius 50px;
+    border-radius: 50px;
     overflow: hidden;
     margin-right: 8px;
+}
+.cover{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+.card .top .userDetails h1{
+    font-size: 16px;
+    color: #fafafa;
+    font-weight: 500;
+    line-height: 1em;
+}
+.card .top .userDetails h3 span{
+    font-size: 0.75em;
+    font-weight: 100;
+}
+.dot{
+    transform: scale(0.6);
+    cursor: pointer;
+}
+.imgTo{
+    position: relative;
+    width: 112%;
+    left: -6%;
+    height: 320px;
+    margin: 10px 0 15px;
+}
+.actionBtns{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.actionBtns img{
+    max-width: 24px;
+    cursor: pointer;
+}
+.actionBtns .left img{
+    margin-right: 12;
+}
+.likes{
+    font-weight: 500;
+    margin-top: 5px;
+    font-size: 16px;
+    color: #4d4d4f;
+}
+.message{
+    font-weight: 400;
+    margin-top: 5px;
+    color: #777; 
+    line-height: 1.5em;
+}
+.message span a{
+    color: #1d92ff;
+    cursor: pointer;
+    text-decoration: none;
+}
+.comments{
+    margin-top: 10px;
+    font-weight: 400;
+    color: #a9a8a9;
+}
+.addComments{
+    display: flex;
+    align-items: center;
+    margin-top: 10px;
+}
+.addComments .userImg{
+    position: relative;
+    min-width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    overflow: hidden;
+    margin-right: 8px;
+}
+.text{
+    width: 100%;
+    border: none;
+    outline: none;
+    font-weight: 400;
+    font-size: 16px;
+    color: #fafafa;
+    background-color: #000101;
+}
+.text::placeholder{
+    color: #fafafa;
+    background-color: #000101; 
+}
+.postTime{
+    margin-top: 10px;
+    font-weight: 500;
+    color: #a9a8a9;
+}
+.allText{
+    color: #fafafa;
 }
